tests/pass/global_init.tc
int helper() {
  return 7;
}

int g = helper();

int main() {
  return g;
}
