tests/fail/call_global_variable.tc
int helper = 1;

int main() {
  return helper();
}
